Fix visibility problem in size selection and enable image gallery for Mugler Alien

--- a/app/products/[id]/product-details.module.css
+++ b/app/products/[id]/product-details.module.css
@@ -147,6 +147,7 @@
 .sizeOption.selected {
     border: 1px solid #000;
     background-color: #fff;
+    color: #000;
     z-index: 10;
     position: relative;
     box-shadow: 0 0 0 1px #000;
